# minecraft-ecs-discord

./: .env.example  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml
docker/backup/: Dockerfile  backup.sh  restore.sh
docker/discord_bot/: Dockerfile  requirements.txt
docker/discord_bot/src/: bot.py
docker/lambda/: Dockerfile
docker/lambda/src/: app.py
docker/minecraft/: README.md
docker/mod_sync/: Dockerfile  sync.sh
docs/: architecture.md  deployment-guide.md  terraform-local-testing.md
terraform/: main.tf  outputs.tf  providers.tf  variables.tf
terraform/modules/api_gateway/: main.tf  outputs.tf  variables.tf
terraform/modules/cloudwatch/: main.tf  outputs.tf  variables.tf
terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
terraform/modules/efs/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
terraform/modules/s3/: main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
