[project]
name = "minecraft-ecs-discord"
version = "0.1.0"
description = "AWS ECS Minecraft server with Discord integration"
requires-python = ">=3.9"
dependencies = [
    "discord.py>=2.0.0",
    "boto3>=1.26.0",
    "python-dotenv>=0.21.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.10.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
